--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@
 [tox]
 # Choose your Python versions. They have to be available
 # on the system the tests are run on.
-envlist = py37
-
+envlist =
+    py37
 
 [testenv]
 deps =
@@ -18,5 +18,6 @@ deps =
 commands =
   flake8
   pytest
+
 setenv =
     PYTHONPATH = {toxinidir}
