--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
-testpaths = ontology2smw
+testpaths = ontology2smw/tests
 python_files = test*.py
 log_cli = True
 log_cli_level = INFO
+markers =
+    smw: test smw functionality
+    ontology: test ontology terms query
+    ontologyterms: test ontology terms query
