--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7]
+#        exclude:
+#          - os: macos-latest
+#            python-version: 3.8
+#          - os: windows-latest
+#            python-version: 3.6
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
