--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,20 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: [3.6, 3.7]
-#        exclude:
-#          - os: macos-latest
-#            python-version: 3.8
-#          - os: windows-latest
-#            python-version: 3.6
+        exclude:
+          - os: windows-latest
+            python-version: 3.6
+          - os: windows-latest
+            python-version: 3.7
+        # tempdisable windows build until https://github.com/TIBHannover/ontology2smw/issues/35 is crushed
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
+    - name: Display Python version
+      run: python -V
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
