--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Display Python version
       run: python -V
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install -r requirements.txt
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install pytest
+#        pip install -r requirements.txt
     - name: install application
       run: |
         python setup.py install
