resolved issue with rdflib.plugins.sparql by pinning pyparsing==2.4.7

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
     - name: install application
       run: |
         python setup.py install
+    - name: test
     - name: run application
       run: |
         ontology2smw --format ttl --ontology https://raw.githubusercontent.com/tibonto/aeon/master/aeon.ttl
