--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
-        exclude:
-          - os: windows-latest
-            python-version: 3.6
-          - os: windows-latest
-            python-version: 3.7
-          - os: windows-latest
-            python-version: 3.8
-        # tempdisable windows build until https://github.com/TIBHannover/ontology2smw/issues/35 is crushed
+#        exclude:
+#          - os: windows-latest
+#            python-version: 3.6
+#          - os: windows-latest
+#            python-version: 3.7
+#          - os: windows-latest
+#            python-version: 3.8
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
