--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ venv
 .idea
 Test Results - pytest_in_test_import_ontology_py.html
 __pycache__
-/wikidetails.yml
 /tmp
 /logs
 confident2wikidata_mapping.yml
@@ -13,3 +12,4 @@ confident2wikidata_mapping.yml
 /ontology2smw.egg-info/
 /.tox/
 /vm/.vagrant/
+/notebooks/
