not smw: for tests that require VM

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,4 @@ log_cli_level = INFO
 markers =
     smw: test smw functionality
     ontology: test ontology terms query
+    termsinsmw: test ontology terms translation into smw pages
