--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest tox
         pip install -r requirements.txt
-    - name: tox
+    - name: pytest
       run: |
-        tox -p all -v
+        pytest -m "not smw"
