--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,6 @@ python_files = test*.py
 log_cli = True
 log_cli_level = INFO
 markers =
-    smw: test smw functionality
+    smw: test mw+smw functionality
     ontology: test ontology terms query
     termsinsmw: test ontology terms translation into smw pages
