tests n code changes for URI resolution

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ markers =
     smw: test mw+smw functionality
     ontology: test ontology terms query
     termsinsmw: test ontology terms translation into smw pages
+    uri: test uri resolution
