--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,4 @@ markers =
     ontology: test ontology terms query
     termsinsmw: test ontology terms translation into smw pages
     uri: test uri resolution
-    report: test report creation
+    outputreport: test report creation
